--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uspace-sdk-ui",
-  "version": "0.1.0-4",
+  "version": "0.1.0-5",
   "description": "uSpace User Interface SDK",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,7 @@
     "attr-accept": "^1.0.3",
     "jquery": "^3.1.1",
     "moment": "^2.15.1",
+    "pikaday": "^1.4.0",
     "react": "^15.3.2"
   }
 }
