--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uspace-sdk-ui",
-  "version": "0.1.0-11",
+  "version": "0.1.1",
   "description": "uSpace User Interface SDK",
   "main": "index.js",
   "scripts": {
