--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "uspace-sdk-ui",
   "version": "0.1.0-14",
   "description": "uSpace User Interface SDK",
-  "main": "index.js",
+  "main": "dist/bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "mkdir -p ../../dist && cp -rf libs/ ../../dist/"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,16 @@
   "homepage": "https://github.com/transformatika/uspace-sdk-ui#readme",
   "dependencies": {
     "attr-accept": "^1.0.3",
-    "jquery": "^3.1.1",
     "moment": "^2.15.1",
     "pikaday": "^1.4.0",
-    "react": "^15.3.2"
+    "react": "^15.3.2",
+    "react-dropzone": "^3.6.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "webpack": "^1.13.2"
   }
 }
